--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="./src/images.png" alt="Sinal do Ronaldinho">
         <input type="text" placeholder="USUÁRIO" class="user">
         <p class="alertUser"></p>
-        <input type="text" placeholder="SENHA" class="password">
+        <input type="password" placeholder="SENHA" class="password">
         <p class="alertPass"></p>
         <button class="buttonLogin">ENTRAR</button>
     </section>
