--- a/pages/home.html
+++ b/pages/home.html
@@ -44,6 +44,9 @@
             <button class="final">>|</button>
         </section>
     </main>
+    <footer>
+        <p class="textFooter">AGENDA DE CONTATOS</p>
+    </footer>
 
 <script src="home.js"></script>
 </body>
