--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Agenda de Contatos</title>
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
@@ -44,7 +44,7 @@
             <button class="final">>|</button>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <p class="textFooter">AGENDA DE CONTATOS</p>
     </footer>
 
